--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -9,7 +9,5 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@master
-      - name: install
-        run: |
-          npm install
-          npm run build
+      - name: test
+        uses: ./cicd/getCommit/
