--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -23,4 +23,7 @@ jobs:
         echo "9  $GITHUB_API_URL"
         echo "10  $GITHUB_SERVER_URL"
         echo "11  $GITHUB_GRAPHQL_URL"
-        git diff --name-only HEAD~ "HEAD"
+
+    - name: git
+      run: |
+        git diff --name-only HEAD~ $GITHUB_SHA
