--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -23,7 +23,4 @@ jobs:
         echo "9  $GITHUB_API_URL"
         echo "10  $GITHUB_SERVER_URL"
         echo "11  $GITHUB_GRAPHQL_URL"
-
-    - name: git
-      run: |
-        git config user.name
+        git diff --name-only HEAD~ 34eb19f29456ae7c0ad87673ca0254f3c0dd75e5
