--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -28,5 +28,5 @@ jobs:
           echo "9  $GITHUB_API_URL"
           echo "10  $GITHUB_SERVER_URL"
           echo "11  $GITHUB_GRAPHQL_URL"
-          git config --global user.name "Tester McPerson"
           git config --global user.name
+          git diff --name-only HEAD~ HEAD
