--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -33,3 +33,4 @@ jobs:
       - name: run
         run: |
           echo "$ACTIONS_RUNTIME_URL"
+          echo ${{ git diff --name-only HEAD~ HEAD }}
