--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -33,4 +33,6 @@ jobs:
       - name: run
         run: |
           echo "$ACTIONS_RUNTIME_URL"
-          git diff --name-only HEAD~ HEAD
+
+      - name: actions/exec
+        uses: actions/exec
