--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -36,3 +36,7 @@ jobs:
 
       - name: actions-github
         uses: actions/github@v1.0.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          args: comment "Hello World"
