--- a/cicd/ci-exec/action.yml
+++ b/cicd/ci-exec/action.yml
@@ -1,3 +1,9 @@
+
+name: 'install'
+run: |
+  npm ci
+working-directory: cicd/ci-exec
+
 name: 'Set env variables'
 description: 'Sets certain env variables so that e2e artifact upload and download can be tested in a shell'
 runs:
