--- a/cicd/ci-exec/action.yml
+++ b/cicd/ci-exec/action.yml
@@ -1,10 +1,10 @@
 
-name: 'install'
+name: 'install ci'
 run: |
   npm ci
 working-directory: cicd/ci-exec
 
-name: 'Set env variables'
+name: 'run node'
 description: 'Sets certain env variables so that e2e artifact upload and download can be tested in a shell'
 runs:
   using: 'node12'
