--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -37,7 +37,7 @@ jobs:
       - name: install ci
         run: |
           npm ci
-        working-directory: cicd/ci-exec
+        working-directory: ./cicd/ci-exec
 
       - name: Compile artifact package
         uses: ./cicd/ci-exec/
