--- a/cicd/ci-exec/action.yml
+++ b/cicd/ci-exec/action.yml
@@ -2,4 +2,6 @@ name: 'Set env variables'
 description: 'Sets certain env variables so that e2e artifact upload and download can be tested in a shell'
 run: |
   npm ci
-  node index.js
+runs:
+  using: 'node12'
+  main: 'index.js'
