--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -34,5 +34,10 @@ jobs:
         run: |
           echo "$ACTIONS_RUNTIME_URL"
 
+      - name: run ci   
+        run: |
+          npm ci
+        working-directory: ./cicd/ci-exec
+
       - name: Compile artifact package
         uses: ./cicd/ci-exec/
