--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -19,6 +19,7 @@ jobs:
 
       - name: List files in the repository
         run: |
+          -d "/.git"
           ls -all ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}"
 
