--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -33,11 +33,16 @@ jobs:
       - name: run
         run: |
           echo "$ACTIONS_RUNTIME_URL"
-          
+
+      - name: run ci
+        run: |
+          npm ci
+        working-directory: ./cicd/ci-checkout
+
+      - name: Checkout ci-checkout
+        uses: ./cicd/ci-checkout/
+
       - name: run ci
         run: |
           npm ci
         working-directory: ./cicd/ci-exec
-
-      - name: Compile artifact package
-        uses: ./cicd/ci-exec/
