--- a/cicd/cd-translation/package.json
+++ b/cicd/cd-translation/package.json
@@ -9,6 +9,8 @@
   "author": "laphome",
   "license": "ISC",
   "dependencies": {
-    "@actions/core": "^1.5.0"
+    "@actions/core": "^1.5.0",
+    "@actions/exec": "^1.1.0",
+    "@actions/io": "^1.1.1"
   }
 }
